# Group3-ICS613-project

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  DEPLOY_DOCKER_GCE.docx  DEPLOY_DOCKER_GCE.md  FINAL_FIXES.md  FRONTEND_INTEGRATION_CHANGES.md  QA_ACCEPTANCE_TESTING_SUMMARY.md  Quick_setup_on_windows.txt  README.md  SETUP_AND_TEST_GUIDE.md  docker-compose.yml  frontend_integration_R2.md  package-lock.json
backend/: .bandit  .env.example  .gitignore  Backend_Setup.md  Dockerfile  R2-commit-messages.md  R2-milestone-priority-review.md  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.py
backend/_local_drafts/: Backend_Scaffolding_Blueprint.md  Group3-ICS 613 - team_charter.v2.md  Group3_Architecture_Document_Nick.docx  Phasing_Plan_with_Roles.md  R1_Backend_Implementation_Plan.md  R2_Completed_work.txt  R2_completed_commit_message.txt  Technical_Design_Backend.docx  Technical_Design_Backend.md
backend/_local_drafts/R1_Retrospective/: Group1_R1_retrospective_and_Defect_triage.txt  Group3_R1_Retrospective_Backend.docx  Group3_R1_retrospective_backend_only.txt  R1_Retrospective_and_Defect_Triage.md
backend/_local_drafts/R1_presentation/: R1 Presentation.pptx  R1 Presentation_V2.pptx  R1Presentation-ProposedPlan.md  R1Presentation_Slide2_Slide3_BE_Lead.md  R1_Presentation_backend_added.pptx  Slide2_Slide3_Speech.txt  _crop_entities.py  _edit_slides.py  _extract_img.py  _ocr_remove.py  _replace_img.py
backend/_local_drafts/R1_presentation/.venv_pptx/: pyvenv.cfg
backend/_local_drafts/R2_presentation/: R2_Backend_Accomplishments.pptx  R2_Code_Walkthrough.md  R2_Demo_Script.md  R2_JWT_Security.md  R2_Speech_Accomplishments.md
backend/_local_drafts/User_stories/: Group1_Cross_Team_Test_Case_Review_Report.md  ICS613_Group3_Manual_Test_Cases_V2.xlsx  ICS613_Group3_Test_Cases_Draft_V1.xlsx  Manual Testing Framework and Test Case Design.md  Manual_Test_Cases.csv  Manual_Test_Cases_ICEBOX.csv  Recommendation_Plan_v5_Revision.docx  Recommendation_Plan_v5_Revision.md  RequirementPackets(Group3)_v5.md  User-stories_final_draft_v5.docx  _update_tc001.py
backend/_local_drafts/diagrams/: 02_class_diagram.puml  architecture.puml  erd.puml  state_machine.puml
backend/_local_drafts/domain_models/: DomainModelVisual.docx  Domain_Model_v2.1.docx  ER-Diagram-PlantUML(Group3).docx
backend/alembic/: env.py
backend/alembic/versions/: 9f56f8f2225b_r1a_users_invites_tokens.py  aff003b1ca5a_r1c_notifications_admin_audit_log.py  b2c3d4e5f6a7_r1d_constraints_and_enum_cleanup.py  c1e5a0519059_r1b_tools_reservations_reviews.py
backend/db/init/: 00-create-test-db.sql
backend/db/pgadmin/: pgpass  servers.json
backend/scripts/: check_db.py  clean_dev.py  init_db.py  seed_dev.py
backend/src/: __init__.py
backend/src/app/: __init__.py  config.py  dependencies.py  dependencies_rate_limit.py  main.py
backend/src/app/api/: deps.py
backend/src/app/api/v1/: __init__.py  admin.py  auth.py  categories.py  health.py  messages.py  notifications.py  reports.py  reservations.py  reviews.py  tools.py
backend/src/app/core/: exceptions.py  logging.py  rate_limit.py  security.py  timezone.py
backend/src/app/db/: base.py  session.py
backend/src/app/models/: __init__.py  admin_audit_log.py  category.py  email_verification.py  enums.py  invite.py  listing_report.py  message.py  notification.py  password_reset.py  photo.py  reservation.py  review.py  tool.py  user.py
backend/src/app/schemas/: admin.py  admin_report.py  auth.py  category.py  common.py  listing_report.py  message.py  notification.py  reservation.py  review.py  tool.py  user.py
backend/src/app/services/: admin.py  admin_report.py  auth.py  category.py  email.py  listing_report.py  message.py  notification.py  photo_storage.py  reservation.py  review.py  scheduler.py  tool.py  user.py
backend/src/app/tests/: conftest.py  factories.py  test_admin.py  test_auth.py  test_config.py  test_notifications.py  test_reservations.py  test_reviews.py  test_tools.py
backend/src/app/tests/acceptance/: __init__.py  helpers.py  test_us01_register.py  test_us02_verify_email.py  test_us03_login.py  test_us04_reset_password.py  (+31 more)
(+113 files in other folders)
